Initial document structure and formatting.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 *.pdf
 *subl*
+*.log
+*.fls
+*.aux
+*synctex*
+*latexmk*
+*.dvi
+*.ps
+*.sty
+*.dvi
+*.ps
+*.sty
+*.idx
+*.lof
+*.lot
+*.out
+*.ilg
+*.ind
+*.toc
